...
            child: BackdropFilter(
              filter: ImageFilter.blur(sigmaX: 30, sigmaY: 30),
              child: Column(
                children: [
                  // ### Journal Image
                  JournalImage(
                    key: const ValueKey('journalImage'),
                    post: widget.post,
                  ),
                  // ### Content
                  JournalContent(
                    key: const ValueKey('journalContent'),
                    post: widget.post,
                  ),
                ],
              ),
            ),
          ),
...
